--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,37 @@
-node_modules
+node_modules# Node.js modules
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment Variables
+.env
+
+# Prisma generated files
+prisma/dev.db
+prisma/dev.db-journal
+prisma/migrations/
+
+# Log files
+logs
+*.log
+logs/*.log
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+debug.log
+*.out
+
+# Editor & OS files
+.DS_Store
+Thumbs.db
+.vscode/
+.idea/
+*.swp
+
+# Build files
+dist/
+coverage/
+
+# JWT Secret Key (if stored in a file)
+jwt_secret.txt
