--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "pg": "^8.13.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "prisma": "^6.4.1"
   }
 }
