--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "sport-app-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "dev": "pnpm nodemon src/server.js",
+    "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,6 +13,8 @@
   "license": "ISC",
   "packageManager": "pnpm@10.6.1",
   "dependencies": {
+    "@prisma/client": "6.4.1",
+    "axios": "^1.8.2",
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
@@ -19,7 +22,8 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.10.0",
-    "pg": "^8.13.3"
+    "pg": "^8.13.3",
+    "redis": "^4.7.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9",
